--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,11 @@ packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.13"
-crewai = "^0.30.0"
-crewai-tools = "^0.2.0"
-pypdf2 = "^3.0.0"
+crewai = "^0.85.0"
+crewai-tools = "^0.14.0"
+pypdf = "^5.0.0"
 python-dotenv = "^1.0.0"
+setuptools = "^80.9.0"
 
 [tool.poetry.scripts]
 start = "src.main:run"
