--- a/charm.yaml
+++ b/charm.yaml
@@ -1,8 +1,8 @@
 version: "0.4.1"
 
 persona:
-  name: "SaaS Launchpad (Lite)"
-  version: "0.1.7"
+  name: "SaaS Launchpad"
+  version: "0.1.8"
   
   description: "Rapid MVP Architect. Turns ideas into Specs, Tech Stacks, Code, and a PDF Report."
   
